# python-store-api-tdd

./: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
store/: main.py  routers.py
store/controllers/: product.py
store/core/: exceptions.py
store/schemas/: product.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
