[tool.poetry]
name = "store-api-tdd"
version = "0.1.0"
description = ""
authors = ["dokidokiab <dokidokiabr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pytest = "^8.2.2"
pydantic-settings = "^2.3.1"
motor = "^3.4.0"
pre-commit = "^3.7.1"
pytest-asyncio = "^0.23.7"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
